#5 Role assignment and permission based menu